crates/baml-rt-api/tests/snapshots/api_test__get_agents_empty_list_returns_200.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": []
}
