crates/baml-rt-api/tests/snapshots/api_test__get_agents_returns_agent_cards_when_present.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": [
    {
      "agent_package": "pkg-a",
      "agent_instance_id": "default",
      "name": "Agent A",
      "version": "0.1.0",
      "agent_card": {
        "name": "Agent A",
        "version": "0.1.0",
        "agent_package": "pkg-a",
        "agent_instance_id": "default",
        "tools": [
          "system/internal_a2a",
          "support/calculate"
        ],
        "description": "Does task A",
        "capabilities": [
          "a2a"
        ]
      }
    },
    {
      "agent_package": "pkg-b",
      "agent_instance_id": "default",
      "name": "Agent B",
      "version": "0.2.0",
      "agent_card": {
        "name": "Agent B",
        "version": "0.2.0",
        "agent_package": "pkg-b",
        "agent_instance_id": "default",
        "tools": [
          "system/internal_a2a",
          "support/calculate"
        ],
        "capabilities": []
      }
    }
  ]
}
