crates/baml-rt-api/tests/snapshots/api_test__get_agents_returns_discovery_list.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": [
    {
      "agent_package": "pkg-a",
      "agent_instance_id": "default",
      "name": "Agent A",
      "version": "0.1.0",
      "agent_card": {
        "name": "Agent A",
        "version": "0.1.0",
        "agent_package": "pkg-a",
        "agent_instance_id": "default",
        "tools": [],
        "baml_functions": [],
        "capabilities": []
      }
    },
    {
      "agent_package": "pkg-b",
      "agent_instance_id": "default",
      "name": "Agent B",
      "version": "0.2.0",
      "agent_card": {
        "name": "Agent B",
        "version": "0.2.0",
        "agent_package": "pkg-b",
        "agent_instance_id": "default",
        "tools": [],
        "baml_functions": [],
        "capabilities": []
      }
    }
  ]
}
