crates/baml-rt-api/tests/snapshots/api_test__get_context_index_cursor_scope_mismatch_returns_400.snap
---
source: crates/baml-rt-api/tests/api_test.rs
assertion_line: 1649
expression: snapshot
---
{
  "status": 400,
  "body": {
    "status": 400,
    "title": "Bad Request",
    "detail": "cursor does not match agentPackage scope for this request"
  }
}
