crates/baml-rt-api/tests/snapshots/api_test__get_conversation_history_invalid_cursor_returns_400_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
assertion_line: 1638
expression: snapshot
---
{
  "status": 400,
  "body": {
    "status": 400,
    "title": "Bad Request",
    "detail": "invalid cursor: missing v1 prefix"
  }
}
