crates/baml-rt-api/tests/snapshots/api_test__get_conversation_history_returns_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": {
    "contextId": "ctx-100-1",
    "version": "[conversation_history_version]",
    "maxEventOrder": "[a2a_event_order]",
    "items": [
      {
        "timestampMs": "[timestamp_ms]",
        "activityAnchor": "[prov_activity_anchor]",
        "role": "system",
        "content": {
          "type": "operational_event",
          "kind": "llm_call_failed",
          "severity": "error",
          "summary": "LLM DraftPrompt failed",
          "detail": "llm_call_failed",
          "failure_class": "failed_graph_incomplete",
          "failure_evidence": "llm_call_failed"
        }
      },
      {
        "timestampMs": "[timestamp_ms]",
        "activityAnchor": "[prov_activity_anchor]",
        "role": "user",
        "content": {
          "type": "message",
          "text": "run analysis"
        },
        "userSpeakerKind": "human"
      },
      {
        "timestampMs": "[timestamp_ms]",
        "activityAnchor": "[prov_activity_anchor]",
        "role": "tool",
        "content": {
          "type": "tool_call",
          "tool_name": "support/calculate",
          "args": {
            "expression": "2+2"
          },
          "fsm_phase": ""
        }
      },
      {
        "timestampMs": "[timestamp_ms]",
        "activityAnchor": "[prov_activity_anchor]",
        "role": "tool",
        "content": {
          "type": "tool_result",
          "tool_name": "support/calculate",
          "fsm_phase": "",
          "outcome": {
            "kind": "error",
            "value": "timeout while calling tool"
          }
        }
      },
      {
        "timestampMs": "[timestamp_ms]",
        "activityAnchor": "[prov_activity_anchor]",
        "role": "system",
        "content": {
          "type": "operational_event",
          "kind": "prompt_rejected",
          "severity": "error",
          "summary": "Prompt rejected: BAML validation failed: invalid response schema",
          "detail": "BAML validation failed: invalid response schema",
          "failure_class": "prompt_rejected",
          "failure_evidence": "BAML validation failed: invalid response schema"
        }
      },
      {
        "timestampMs": "[timestamp_ms]",
        "activityAnchor": "[prov_activity_anchor]",
        "role": "assistant",
        "content": {
          "type": "message",
          "text": "BAML validation failed: invalid response schema"
        }
      }
    ],
    "nextCursor": "[conversation_history_cursor]"
  }
}
