crates/baml-rt-api/tests/snapshots/api_test__get_mermaid_context_emits_http_and_handler_spans.snap
---
source: crates/baml-rt-api/tests/api_test.rs
assertion_line: 1567
expression: snapshot
---
{
  "status": 200,
  "spans": [
    {
      "name": "baml_rt_api.get_mermaid_context",
      "attributes": {
        "code.filepath": "crates/baml-rt-api/src/spans.rs",
        "code.namespace": "baml_rt_api::spans",
        "code.lineno": 55,
        "thread.id": "[redacted]",
        "thread.name": "[redacted]",
        "context_id": "ctx-1-1",
        "busy_ns": "[redacted]",
        "idle_ns": "[redacted]"
      }
    }
  ]
}
