crates/baml-rt-api/tests/snapshots/api_test__get_mermaid_task_returns_snapshot.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": "sequenceDiagram\n    autonumber\n    participant agent\n    agent->>User: done"
}
