crates/baml-rt-api/tests/snapshots/api_test__get_openapi_json_returns_spec.snap
---
source: crates/baml-rt-api/tests/api_test.rs
expression: snapshot
---
{
  "status": 200,
  "body": {
    "openapi": "3.1.0",
    "info": {
      "title": "utoipa-axum",
      "description": "Utoipa's axum bindings for seamless integration for the two",
      "contact": {
        "name": "Juha Kukkonen",
        "email": "juha7kukkonen@gmail.com"
      },
      "license": {
        "name": "MIT OR Apache-2.0",
        "identifier": "MIT OR Apache-2.0"
      },
      "version": "0.2.0"
    },
    "paths": {
      "/agents": {
        "get": {
          "tags": [
            "agents"
          ],
          "summary": "List running agents (GET /agents).",
          "operationId": "list_agents",
          "responses": {
            "200": {
              "description": "List of running agents",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "array",
                    "items": {
                      "$ref": "#/components/schemas/AgentDiscoveryEntryDto"
                    }
                  }
                }
              }
            }
          }
        }
      },
      "/agents/{agent_package}/{agent_instance_id}/a2a": {
        "post": {
          "tags": [
            "agents"
          ],
          "summary": "Forward A2A JSON-RPC request (POST /agents/{agent_package}/{agent_instance_id}/a2a).",
          "operationId": "post_a2a",
          "parameters": [
            {
              "name": "agent_package",
              "in": "path",
              "description": "Agent package identifier (e.g. manifest name)",
              "required": true,
              "schema": {
                "type": "string"
              }
            },
            {
              "name": "agent_instance_id",
              "in": "path",
              "description": "Agent instance identifier",
              "required": true,
              "schema": {
                "type": "string"
              }
            }
          ],
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {}
              }
            },
            "required": true
          },
          "responses": {
            "200": {
              "description": "JSON-RPC responses",
              "content": {
                "application/json": {
                  "schema": {
                    "type": "array",
                    "items": {}
                  }
                }
              }
            },
            "400": {
              "description": "Malformed request"
            },
            "404": {
              "description": "Agent not found"
            },
            "500": {
              "description": "Internal error"
            }
          }
        }
      },
      "/agents/{agent_package}/{agent_instance_id}/a2a/sse": {
        "post": {
          "tags": [
            "agents"
          ],
          "summary": "A2A over Server-Sent Events: POST /agents/{agent_package}/{agent_instance_id}/a2a/sse\nRequest body: JSON-RPC request. Response: Content-Type: text/event-stream; each event's\n`data` is one JSON-RPC response. Keep-alive comments sent on interval while stream is open.",
          "operationId": "post_a2a_sse",
          "parameters": [
            {
              "name": "agent_package",
              "in": "path",
              "description": "Agent package identifier",
              "required": true,
              "schema": {
                "type": "string"
              }
            },
            {
              "name": "agent_instance_id",
              "in": "path",
              "description": "Agent instance identifier",
              "required": true,
              "schema": {
                "type": "string"
              }
            }
          ],
          "requestBody": {
            "content": {
              "application/json": {
                "schema": {}
              }
            },
            "required": true
          },
          "responses": {
            "200": {
              "description": "SSE stream of JSON-RPC responses",
              "content": {
                "text/event-stream": {}
              }
            },
            "400": {
              "description": "Malformed request"
            },
            "404": {
              "description": "Agent not found"
            },
            "500": {
              "description": "Internal error"
            }
          }
        }
      },
      "/contexts/{context_id}/mermaid": {
        "get": {
          "tags": [
            "mermaid"
          ],
          "summary": "Mermaid diagram by context",
          "description": "Returns the provenance subgraph for the given A2A context ID as a Mermaid sequenceDiagram (text/plain). Available when the runner is started with GraphQLite provenance.",
          "operationId": "get_mermaid_context",
          "parameters": [
            {
              "name": "context_id",
              "in": "path",
              "description": "A2A context ID",
              "required": true,
              "schema": {
                "type": "string"
              }
            }
          ],
          "responses": {
            "200": {
              "description": "Mermaid sequenceDiagram",
              "content": {
                "text/plain": {}
              }
            },
            "404": {
              "description": "No graph found for context"
            },
            "500": {
              "description": "Internal error"
            },
            "501": {
              "description": "Mermaid service not available (provenance not configured)"
            }
          }
        }
      },
      "/contexts/{context_id}/metrics": {
        "get": {
          "tags": [
            "provenance"
          ],
          "summary": "Context metrics by context_id",
          "description": "Returns turn-level and session-level token/call/duration metrics for the given A2A context ID. Available when GraphQLite-backed provenance is configured.",
          "operationId": "get_context_metrics",
          "parameters": [
            {
              "name": "context_id",
              "in": "path",
              "description": "A2A context ID",
              "required": true,
              "schema": {
                "type": "string"
              }
            }
          ],
          "responses": {
            "200": {
              "description": "Context metrics",
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/ContextMetricsResponseDto"
                  }
                }
              }
            },
            "404": {
              "description": "No metrics found for context"
            },
            "500": {
              "description": "Internal error"
            },
            "501": {
              "description": "Metrics service not available (provenance not configured)"
            }
          }
        }
      },
      "/tasks/{task_id}/mermaid": {
        "get": {
          "tags": [
            "mermaid"
          ],
          "summary": "Mermaid diagram by task",
          "description": "Returns the provenance subgraph for the given A2A task ID as a Mermaid sequenceDiagram (text/plain). Available when the runner is started with GraphQLite provenance.",
          "operationId": "get_mermaid_task",
          "parameters": [
            {
              "name": "task_id",
              "in": "path",
              "description": "A2A task ID",
              "required": true,
              "schema": {
                "type": "string"
              }
            }
          ],
          "responses": {
            "200": {
              "description": "Mermaid sequenceDiagram",
              "content": {
                "text/plain": {}
              }
            },
            "404": {
              "description": "No graph found for task"
            },
            "500": {
              "description": "Internal error"
            },
            "501": {
              "description": "Mermaid service not available (provenance not configured)"
            }
          }
        }
      }
    },
    "components": {
      "schemas": {
        "AgentCardDto": {
          "type": "object",
          "description": "Cut-down agent card (included in every GET /agents item).",
          "required": [
            "name",
            "version",
            "agent_package",
            "agent_instance_id",
            "tools",
            "capabilities"
          ],
          "properties": {
            "agent_instance_id": {
              "type": "string"
            },
            "agent_package": {
              "type": "string"
            },
            "capabilities": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "description": {
              "type": [
                "string",
                "null"
              ]
            },
            "name": {
              "type": "string"
            },
            "tools": {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            "version": {
              "type": "string"
            }
          }
        },
        "AgentDiscoveryEntryDto": {
          "type": "object",
          "description": "Discovery entry for one running agent (GET /agents response item).",
          "required": [
            "agent_package",
            "agent_instance_id",
            "name",
            "version",
            "agent_card"
          ],
          "properties": {
            "agent_card": {
              "$ref": "#/components/schemas/AgentCardDto",
              "description": "Agent card (cut-down shape) for discovery."
            },
            "agent_instance_id": {
              "type": "string"
            },
            "agent_package": {
              "type": "string"
            },
            "name": {
              "type": "string"
            },
            "version": {
              "type": "string"
            }
          }
        },
        "ContextMetricsResponseDto": {
          "type": "object",
          "description": "API response for `GET /contexts/{context_id}/metrics`.",
          "required": [
            "context_id",
            "turns",
            "session"
          ],
          "properties": {
            "context_id": {
              "type": "string"
            },
            "session": {
              "$ref": "#/components/schemas/ContextSessionMetricsDto"
            },
            "turns": {
              "type": "array",
              "items": {
                "$ref": "#/components/schemas/ContextTurnMetricsDto"
              }
            }
          }
        },
        "ContextSessionMetricsDto": {
          "type": "object",
          "description": "Session-level aggregate metrics for one context id.",
          "required": [
            "turns_total",
            "user_prompts_total",
            "llm_calls_total",
            "llm_duration_ms_total",
            "tokens_total"
          ],
          "properties": {
            "llm_calls_total": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "llm_duration_ms_total": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "tokens_total": {
              "$ref": "#/components/schemas/TokenUsageDto"
            },
            "turns_total": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "user_prompts_total": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            }
          }
        },
        "ContextTurnMetricsDto": {
          "type": "object",
          "description": "Turn-level metrics scoped by `(context_id, message_id)`.",
          "required": [
            "message_id",
            "user_prompt_count",
            "llm_call_count",
            "llm_duration_ms_total",
            "tokens"
          ],
          "properties": {
            "llm_call_count": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "llm_duration_ms_total": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "message_id": {
              "type": "string"
            },
            "tokens": {
              "$ref": "#/components/schemas/TokenUsageDto"
            },
            "user_prompt_count": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            }
          }
        },
        "TokenUsageDto": {
          "type": "object",
          "description": "Token totals for a turn or session.",
          "required": [
            "in",
            "out",
            "total"
          ],
          "properties": {
            "in": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "out": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            },
            "total": {
              "type": "integer",
              "format": "int64",
              "minimum": 0
            }
          }
        }
      }
    },
    "tags": [
      {
        "name": "agents",
        "description": "Agent discovery and A2A JSON-RPC"
      },
      {
        "name": "mermaid",
        "description": "Provenance graph as Mermaid sequence diagrams (when GraphQLite is enabled)"
      },
      {
        "name": "provenance",
        "description": "Provenance-backed context metrics (when GraphQLite is enabled)"
      }
    ]
  }
}
